hungry animal method has been added
